Tue Oct 17 02:16:37 BST 2006  Olly Betts <olly@survex.com>

	* testsuite/backendmanager.cc: Fix compilation when valgrind is
	  detected by configure.

Thu Oct 12 13:30:05 BST 2006  Olly Betts <olly@survex.com>

	* xapian.spec.in: Package xapian-progsrv.

Thu Oct 12 00:49:47 BST 2006  Olly Betts <olly@survex.com>

	* HACKING: Note that on Debian, tetex-extra is needed for
	  fancyhdr.sty.
	* HACKING: Note that dch can be used to update debian/changelog.

Wed Oct 11 23:35:08 BST 2006  Olly Betts <olly@survex.com>

	* docs/Makefile.am: If running latex on refman.ps fails, cat
	  refman.log since that is likely to show what failed.

Tue Oct 10 17:24:00 BST 2006  Olly Betts <olly@survex.com>

	* NEWS: Bump release date.

Sun Oct 08 21:41:04 BST 2006  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.ac: Update for 0.9.7.

Sun Oct 08 10:06:51 BST 2006  Olly Betts <olly@survex.com>

	* testsuite/testsuite.cc: Use lseek() to skip existing valgrind output
	  instead of repeated calls to read.  Handle the old valgrind naming
	  convention for log files.

Sun Oct 08 09:35:59 BST 2006  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Fix a couple of typos in comments.

Sun Oct 08 05:36:36 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Disable probing and short-cut tests for a FORTRAN
	  compiler.  We don't use one, but current libtool versions always
	  check for it regardless.

Sat Oct 07 21:19:35 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac,tests/runtest.in,testsuite/backendmanager.cc,
	  testsuite/testsuite.cc: Fix testsuite harness to show valgrind
	  output when a test fails (when running under valgrind in verbose
	  mode).  This probably stopped working due to changes in valgrind 3.
	* testsuite/backendmanager.cc: Run xapian-tcpsrv under valgrind if
	  apitest is.

Fri Oct  6 18:27:13 BST 2006  Richard Boulton <richard@lemurconsulting.com>

	* tests/runtest.in: export $LIBTOOL, $VALGRIND and $VG_LOG_FD.